--- a/spdz/CMakeLists.txt
+++ b/spdz/CMakeLists.txt
@@ -3,6 +3,7 @@ project(MulTest)
 
 # 设置 C++ 标准
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # 开启 OpenMP 支持
 find_package(OpenMP REQUIRED)
